--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Picture": "Server=(localdb)\\MSSQLLocalDB;Database=Picture;MultipleActiveResultSets=true"
+  }
 }
