Add and implement SignalR

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Picture": "Server=(localdb)\\MSSQLLocalDB;Database=Picture;MultipleActiveResultSets=true"
+    "Picture": "workstation id=Picture.mssql.somee.com;packet size=4096;user id=OKSID_SQLLogin_1;pwd=cwjofhxulu;data source=Picture.mssql.somee.com;persist security info=False;initial catalog=Picture;TrustServerCertificate=True"
   }
 }
